2009-09-06 Jens Thoms Toerring    <jt@toerring.de>

	Some more bugs in fdesign, found by Werner Heisch,
	removed. Most important: bitmaps weren't drawn
	correctly.
	* lib/bitmap.c: fl_set_bitmapbutton_file() removed,
	is now an alias for fl_set_bitmap_file()
	* lib/sysdep.c: fl_now() doesn't add a trailing '\n'
	anymore

2009-09-05 Jens Thoms Toerring    <jt@toerring.de>

	Several bugs reported by Werner Heisch in fdesign fixed.
	Input of form and group names is now checked for being
	a valid C identifier.

2009-09-03 Jens Thoms Toerring    <jt@toerring.de>

	* lib/util.c: Removed function fli_get_string()
	which was just a duplication of fli_print_to_string()

2009-09-01 Jens Thoms Toerring    <jt@toerring.de>

	Tabs replaced by spaces.

	Repairs to fd2ps that had stopped working (output
	doesn't look too nice yet, changing that will probably
	take quite a bit of work...)

2009-08-30 Jens Thoms Toerring    <jt@toerring.de>

	Support for spinner objects built into fdesign.

2009-08-28 Jens Thoms Toerring    <jt@toerring.de>

	Dependence of form size on snap grid setting in fdesign
	removed since it led to unpleasant effects under KDE, form
	size can now be set directly via a popup window.

	Some more bugs with new way of reading .fd files removed.

	* lib/browser.c: Missing redraw of scrollbar added in
	fl_show_browser_line() (thanks to Werner Heisch for
	noticing and telling me about it),

2009-08-26 Jens Thoms Toerring    <jt@toerring.de>

	* README: updated to reflect new mailing list location
	and homepage

2009-08-25 Jens Thoms Toerring    <jt@toerring.de>

	A number of bugs in the new code for reading in .fd-Files
	pointed out by Werder Heisch have been removed.

2009-08-22 Jens Thoms Toerring    <jt@toerring.de>

	Thanks to lots of input (patches and discussions0 by Werner
	Heisch the way .fd files get read in and analyzed has been
	changed to be a lot more liberal of what is accepted as well
	as spitting out reasonable error messages and warnings if